# iesopt-project-template

./: README.md  cookiecutter.json  iesopt_component_drawing_convention.drawio  minutes.md
hooks/: post_gen_project.sh  pre_prompt.py
{{ cookiecutter.project_slug }}/: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
{{ cookiecutter.project_slug }}/opt/: config.iesopt.yaml
{{ cookiecutter.project_slug }}/opt/data/timeseries/: example.csv
{{ cookiecutter.project_slug }}/opt/templates/: CHPBackpressure.iesopt.template.yaml  GeothermalHeatSource.iesopt.template.yaml  HeatOnlyBoiler.iesopt.template.yaml  HeatPump.iesopt.template.yaml  HeatStorage.iesopt.template.yaml
